src/objects/ChangeReason__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Allow_On_Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow On Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_On_Outbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow On Outbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception_Type_Code__c</fullName>
        <label>Exception Type Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Code__c</fullName>
        <label>Maintenance Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <description>A=Indicates data to be added
D=Indicates the data to be deleted
&apos;D&apos; can be used with reason codes N12C, N1BT, N1PK, REFPG or REFKY. &apos;A&apos; can be used with reason code REFKY only.</description>
        <label>Reason Description</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Value__c</fullName>
        <label>Reason Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_For_Drop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid For Drop?</label>
        <type>Checkbox</type>
    </fields>
    <label>Change Reason</label>
</CustomObject>